@@ -1,3 +1,6 @@
+- The _PC_MAX_INPUT query for file handles now returns the default
+  buffer size.
+
 - Integrated the new OS4 build makefile collection, as contributed by
   Steven Solie. Thank you very much!
 
